// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contributions Selection reducer should not change the state for an action with the wrong scope 1`] = `
Object {
  "annualAmount": "75",
  "contributionType": "MONTHLY",
  "customAmount": null,
  "error": null,
  "isCustomAmount": false,
  "monthlyAmount": "5",
  "oneOffAmount": "50",
}
`;

exports[`Contributions Selection reducer should not change the state for an action with the wrong scope 2`] = `
Object {
  "annualAmount": "75",
  "contributionType": "MONTHLY",
  "customAmount": null,
  "error": null,
  "isCustomAmount": false,
  "monthlyAmount": "5",
  "oneOffAmount": "50",
}
`;

exports[`Contributions Selection reducer should not change the state for an action with the wrong scope 3`] = `
Object {
  "annualAmount": "75",
  "contributionType": "MONTHLY",
  "customAmount": null,
  "error": null,
  "isCustomAmount": false,
  "monthlyAmount": "5",
  "oneOffAmount": "50",
}
`;

exports[`Contributions Selection reducer should return the initial state 1`] = `
Object {
  "annualAmount": "75",
  "contributionType": "MONTHLY",
  "customAmount": null,
  "error": null,
  "isCustomAmount": false,
  "monthlyAmount": "5",
  "oneOffAmount": "50",
}
`;

exports[`Contributions Selection reducer should return the initial state for another country group 1`] = `
Object {
  "annualAmount": "75",
  "contributionType": "MONTHLY",
  "customAmount": null,
  "error": null,
  "isCustomAmount": false,
  "monthlyAmount": "15",
  "oneOffAmount": "50",
}
`;
